--- a/GoBoken/Main.storyboard
+++ b/GoBoken/Main.storyboard
@@ -31,7 +31,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cTm-Ar-eAF"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Map" id="zMm-ju-6l9"/>
+                    <navigationItem key="navigationItem" title="Map" id="zMm-ju-6l9">
+                        <barButtonItem key="rightBarButtonItem" title="Filter" id="EcS-HU-gA8">
+                            <connections>
+                                <segue destination="hVz-LJ-abU" kind="show" id="bFX-Ca-Cd8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="aZM-wq-T7L" id="i3d-KX-ZMR"/>
                     </connections>
@@ -39,6 +45,142 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s0t-2h-8YG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2756" y="791"/>
+        </scene>
+        <!--Filter-->
+        <scene sceneID="S2Y-PS-pNA">
+            <objects>
+                <viewController title="Filter" id="hVz-LJ-abU" customClass="FilterViewController" customModule="GoBoken" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pco-eB-AK7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="xSy-NP-JM4">
+                                <rect key="frame" x="14" y="128" width="347" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="Ddx-Bv-C5n"/>
+                                </constraints>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maximum distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNJ-Fs-jZ5">
+                                <rect key="frame" x="16" y="100" width="150" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="0Cs-WC-Pd5"/>
+                                    <constraint firstAttribute="height" constant="24" id="bDo-yL-btd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 miles" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHQ-Ve-eAP">
+                                <rect key="frame" x="277" y="100" width="82" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="GaT-d8-opj"/>
+                                    <constraint firstAttribute="width" constant="82" id="lWP-pL-CQG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching for:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7v-7D-yQ8">
+                                <rect key="frame" x="16" y="173" width="343" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="Jgw-eN-DpR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xgw-gg-VFV" customClass="ToggleButton" customModule="GoBoken" customModuleProvider="target">
+                                <rect key="frame" x="87.5" y="205" width="200" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="4I8-Nd-YMZ"/>
+                                    <constraint firstAttribute="width" constant="200" id="cvr-fi-aY4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Dining">
+                                    <color key="titleColor" red="0.80520959560000005" green="0.81095084930000005" blue="0.82817461059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZR-d0-xaB" customClass="ToggleButton" customModule="GoBoken" customModuleProvider="target">
+                                <rect key="frame" x="87.5" y="249" width="200" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Hotels">
+                                    <color key="titleColor" red="0.80520959560000005" green="0.81095084930000005" blue="0.82817461059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xc3-Zo-ROy" customClass="ToggleButton" customModule="GoBoken" customModuleProvider="target">
+                                <rect key="frame" x="87.5" y="337" width="200" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Landmarks">
+                                    <color key="titleColor" red="0.80520959560000005" green="0.81095084930000005" blue="0.82817461059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1K-j8-Owy" customClass="ToggleButton" customModule="GoBoken" customModuleProvider="target">
+                                <rect key="frame" x="87.5" y="293" width="200" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Coffee">
+                                    <color key="titleColor" red="0.80520959560000005" green="0.81095084930000005" blue="0.82817461059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4I-3F-Fmh">
+                                <rect key="frame" x="157" y="576" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="67O-Ii-bec"/>
+                                    <constraint firstAttribute="height" constant="30" id="8Y8-r4-XaL"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonTapped:" destination="hVz-LJ-abU" eventType="touchUpInside" id="G6o-j8-GQp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YHQ-Ve-eAP" firstAttribute="top" secondItem="uzz-Rz-NSt" secondAttribute="top" constant="36" id="2bw-10-44z"/>
+                            <constraint firstItem="Xc3-Zo-ROy" firstAttribute="height" secondItem="Xgw-gg-VFV" secondAttribute="height" id="2tU-h8-Uw6"/>
+                            <constraint firstItem="O1K-j8-Owy" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="AHh-4X-9w7"/>
+                            <constraint firstItem="xSy-NP-JM4" firstAttribute="leading" secondItem="uzz-Rz-NSt" secondAttribute="leading" constant="16" id="Bhf-09-eBM"/>
+                            <constraint firstItem="uzz-Rz-NSt" firstAttribute="trailing" secondItem="G7v-7D-yQ8" secondAttribute="trailing" constant="16" id="EsD-Mh-vxi"/>
+                            <constraint firstItem="EZR-d0-xaB" firstAttribute="height" secondItem="Xgw-gg-VFV" secondAttribute="height" id="I3b-l9-vgZ"/>
+                            <constraint firstItem="VNJ-Fs-jZ5" firstAttribute="leading" secondItem="uzz-Rz-NSt" secondAttribute="leading" constant="16" id="Icg-H7-rng"/>
+                            <constraint firstItem="g4I-3F-Fmh" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="Jds-aH-dvB"/>
+                            <constraint firstItem="G7v-7D-yQ8" firstAttribute="leading" secondItem="uzz-Rz-NSt" secondAttribute="leading" constant="16" id="KBh-Ls-jUh"/>
+                            <constraint firstItem="O1K-j8-Owy" firstAttribute="width" secondItem="Xgw-gg-VFV" secondAttribute="width" id="M8p-oR-XVf"/>
+                            <constraint firstItem="Xgw-gg-VFV" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="Mdp-W5-nJt"/>
+                            <constraint firstItem="uzz-Rz-NSt" firstAttribute="trailing" secondItem="YHQ-Ve-eAP" secondAttribute="trailing" constant="16" id="REJ-c7-lUx"/>
+                            <constraint firstItem="Xc3-Zo-ROy" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="V3s-Lb-ET2"/>
+                            <constraint firstItem="Xgw-gg-VFV" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="W2v-G8-9Uz"/>
+                            <constraint firstItem="G7v-7D-yQ8" firstAttribute="top" secondItem="xSy-NP-JM4" secondAttribute="bottom" constant="16" id="Yas-1K-iAf"/>
+                            <constraint firstItem="EZR-d0-xaB" firstAttribute="top" secondItem="Xgw-gg-VFV" secondAttribute="bottom" constant="8" id="b6X-db-A4Y"/>
+                            <constraint firstItem="VNJ-Fs-jZ5" firstAttribute="top" secondItem="uzz-Rz-NSt" secondAttribute="top" constant="36" id="bXH-e2-5Ci"/>
+                            <constraint firstItem="Xc3-Zo-ROy" firstAttribute="width" secondItem="Xgw-gg-VFV" secondAttribute="width" id="fz7-5h-sn5"/>
+                            <constraint firstItem="EZR-d0-xaB" firstAttribute="width" secondItem="Xgw-gg-VFV" secondAttribute="width" id="kK4-px-GEM"/>
+                            <constraint firstItem="Xc3-Zo-ROy" firstAttribute="top" secondItem="O1K-j8-Owy" secondAttribute="bottom" constant="8" id="lKe-w7-X8f"/>
+                            <constraint firstItem="uzz-Rz-NSt" firstAttribute="bottom" secondItem="g4I-3F-Fmh" secondAttribute="bottom" constant="12" id="nK4-RX-GAs"/>
+                            <constraint firstItem="xSy-NP-JM4" firstAttribute="top" secondItem="VNJ-Fs-jZ5" secondAttribute="bottom" constant="4" id="pWi-dU-WSb"/>
+                            <constraint firstItem="xSy-NP-JM4" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="rif-Sd-Cix"/>
+                            <constraint firstItem="O1K-j8-Owy" firstAttribute="height" secondItem="Xgw-gg-VFV" secondAttribute="height" id="sHg-X4-I5y"/>
+                            <constraint firstItem="O1K-j8-Owy" firstAttribute="top" secondItem="EZR-d0-xaB" secondAttribute="bottom" constant="8" id="xwe-0o-XvR"/>
+                            <constraint firstItem="Xgw-gg-VFV" firstAttribute="top" secondItem="G7v-7D-yQ8" secondAttribute="bottom" constant="8" id="zD9-Pt-zyV"/>
+                            <constraint firstItem="EZR-d0-xaB" firstAttribute="centerX" secondItem="Pco-eB-AK7" secondAttribute="centerX" id="zl6-lJ-qzJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uzz-Rz-NSt"/>
+                    </view>
+                    <connections>
+                        <outlet property="coffeeToggle" destination="O1K-j8-Owy" id="5hv-hM-cw0"/>
+                        <outlet property="diningToggle" destination="Xgw-gg-VFV" id="nGJ-8U-K28"/>
+                        <outlet property="distanceLabel" destination="YHQ-Ve-eAP" id="b4f-D0-x62"/>
+                        <outlet property="distanceSlider" destination="xSy-NP-JM4" id="gVe-ZP-ifx"/>
+                        <outlet property="hotelToggle" destination="EZR-d0-xaB" id="f9E-9t-1jU"/>
+                        <outlet property="landmarkToggle" destination="Xc3-Zo-ROy" id="P2n-SX-uzP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zfI-gd-fMo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3736.8000000000002" y="789.35532233883066"/>
         </scene>
         <!--Table-->
         <scene sceneID="44f-iv-wMZ">
@@ -119,7 +261,13 @@
                             <outlet property="delegate" destination="hDJ-Kk-Nft" id="TJR-xG-xfl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Table" id="HUf-Cf-HgH"/>
+                    <navigationItem key="navigationItem" title="Table" id="HUf-Cf-HgH">
+                        <barButtonItem key="rightBarButtonItem" title="Filter" id="XAJ-Mh-DFJ">
+                            <connections>
+                                <segue destination="hVz-LJ-abU" kind="show" id="AUH-5x-MIs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q0F-8C-fgq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -245,13 +393,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dkr-jS-EEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4013.5999999999999" y="462.36881559220393"/>
+            <point key="canvasLocation" x="3737" y="13"/>
         </scene>
-        <!--Table View-->
+        <!--Table-->
         <scene sceneID="7E9-GS-Kmx">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AI8-uv-cBy" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Table View" id="gvb-uH-bmI"/>
+                    <tabBarItem key="tabBarItem" title="Table" id="gvb-uH-bmI"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F68-oR-DUr">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -285,11 +433,11 @@
             </objects>
             <point key="canvasLocation" x="598" y="404"/>
         </scene>
-        <!--Map View-->
+        <!--Map-->
         <scene sceneID="9Y5-iz-aLu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZZK-LE-gVc" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Map View" id="bb6-y3-3DS"/>
+                    <tabBarItem key="tabBarItem" title="Map" id="bb6-y3-3DS"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kSG-mq-zdr">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -305,4 +453,7 @@
             <point key="canvasLocation" x="1836" y="791"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="bFX-Ca-Cd8"/>
+    </inferredMetricsTieBreakers>
 </document>
