added recommendation button

--- a/GoBoken/Base.lproj/LaunchScreen.storyboard
+++ b/GoBoken/Base.lproj/LaunchScreen.storyboard
@@ -27,9 +27,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="Your Personal Guide">
+                                    <fragment content="Your Personal Guide In Hoboken">
                                         <attributes>
-                                            <color key="NSColor" red="0.0" green="0.36745378324181832" blue="0.63495912175104408" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="NSColor" red="0.0" green="0.36745378319999999" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <font key="NSFont" size="21" name="Futura-Medium"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
