--- a/GoBoken/Main.storyboard
+++ b/GoBoken/Main.storyboard
@@ -46,13 +46,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cTm-Ar-eAF"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Map" id="zMm-ju-6l9">
+                    <navigationItem key="navigationItem" id="zMm-ju-6l9">
+                        <barButtonItem key="leftBarButtonItem" title="Explore Hoboken" id="fFh-PA-7qj"/>
                         <rightBarButtonItems>
                             <barButtonItem systemItem="search" id="RjM-zU-fLq">
                                 <connections>
                                     <action selector="searchBtnClicked:" destination="Qrd-3H-gtQ" id="SjZ-Kd-CoO"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem title="Recm" image="star" id="ZGB-3t-HU4"/>
                             <barButtonItem title="Filter" image="filter" id="EcS-HU-gA8">
                                 <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-11"/>
                                 <connections>
@@ -150,7 +152,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4I-3F-Fmh">
-                                <rect key="frame" x="157.5" y="576" width="60" height="30"/>
+                                <rect key="frame" x="157.5" y="532" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="67O-Ii-bec"/>
                                     <constraint firstAttribute="height" constant="30" id="8Y8-r4-XaL"/>
@@ -206,7 +208,7 @@
             </objects>
             <point key="canvasLocation" x="3736.8000000000002" y="789.35532233883066"/>
         </scene>
-        <!--Table-->
+        <!--Table View Controller-->
         <scene sceneID="44f-iv-wMZ">
             <objects>
                 <tableViewController restorationIdentifier="TableViewController" storyboardIdentifier="TableViewController" id="hDJ-Kk-Nft" customClass="TableViewController" customModule="GoBoken" customModuleProvider="target" sceneMemberID="viewController">
@@ -285,13 +287,18 @@
                             <outlet property="delegate" destination="hDJ-Kk-Nft" id="TJR-xG-xfl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Table" id="HUf-Cf-HgH">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="HUf-Cf-HgH">
+                        <barButtonItem key="leftBarButtonItem" title="Explore Hoboken" id="jai-gm-kOL">
+                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem systemItem="search" id="NBq-3m-yDm">
                                 <connections>
                                     <action selector="SearchTableClicked:" destination="hDJ-Kk-Nft" id="mWc-9j-onG"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem title="Item" image="star" id="s1v-vb-qkP"/>
                             <barButtonItem title="Filter" image="filter" id="XAJ-Mh-DFJ">
                                 <inset key="imageInsets" minX="30" minY="0.0" maxX="0.0" maxY="-11"/>
                                 <connections>
@@ -300,6 +307,7 @@
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q0F-8C-fgq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -540,10 +548,12 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="coL-cy-HLf" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="soK-c9-6tV">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="centered" id="soK-c9-6tV">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.01096656627" green="0.38371263370000003" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.01096656627" green="0.38371263370000003" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="selectedImageTintColor" red="0.01096656627" green="0.38371263370000003" blue="0.63495912180000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
                     <connections>
                         <segue destination="ZZK-LE-gVc" kind="relationship" relationship="viewControllers" id="I3W-lj-mHX"/>
@@ -577,8 +587,9 @@
     <resources>
         <image name="app_logo" width="200" height="200"/>
         <image name="filter" width="50" height="50"/>
+        <image name="star" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bFX-Ca-Cd8"/>
+        <segue reference="AUH-5x-MIs"/>
     </inferredMetricsTieBreakers>
 </document>
